app/static/less/events_page.less
@import (reference) "common.less";

@navbar-color: #0a2446;

@overlay-icon-reduction-factor: 0.75;
@event-card-image-size-desktop: 110px;
@event-card-image-size-tablet: 150px;
@event-card-image-size-mobile: 100px;

@overlay-icon-size-desktop: @overlay-icon-reduction-factor * @event-card-image-size-desktop;
@overlay-icon-size-tablet: @overlay-icon-reduction-factor * @event-card-image-size-tablet;
@overlay-icon-size-mobile: @overlay-icon-reduction-factor * @event-card-image-size-mobile;

//------------------------------------------------------------------------

.event-card {
    text-align: center;
    background-color: white;

    margin: 15px;
    padding: 15px;

    border-radius: 8px;
    
    -webkit-transition: all 250ms ease;
    -moz-transition: all 250ms ease;
    -o-transition: all 250ms ease;
    transition: all 250ms ease;

    position: relative;

    .event-image-container {
        @media @desktop {
            height: @event-card-image-size-desktop;
            width: @event-card-image-size-desktop;
        }
        @media @tablet {
            height: @event-card-image-size-tablet;
            width: @event-card-image-size-tablet;
        }
        @media @mobile {
            height: @event-card-image-size-mobile;
            width: @event-card-image-size-mobile;
        }

        position: relative;

        .event-image {
            -webkit-filter: saturate(0%) brightness(1.40);
            filter: saturate(0%) brightness(1.40);
    
            -webkit-transition: filter 250ms ease;
            -moz-transition: filter 250ms ease;
            -o-transition: filter 250ms ease;
            transition: filter 250ms ease;
    
            width: 100%;
            height: 100%;
        }
    }

    .overlay {
        position: absolute;
        top: 0; bottom: 0; left: 0; right: 0;
        opacity: 0;
        transition: all 250ms ease;

        @media @desktop {
            height: @event-card-image-size-desktop;
            width: @event-card-image-size-desktop;
        }
        @media @tablet {
            height: @event-card-image-size-tablet;
            width: @event-card-image-size-tablet;
        }
        @media @mobile {
            height: @event-card-image-size-mobile;
            width: @event-card-image-size-mobile;
        }

        .icon {
            @media @desktop {
                font-size: @overlay-icon-size-desktop;
            }
            @media @tablet {
                font-size: @overlay-icon-size-tablet;
            }
            @media @mobile {
                font-size: @overlay-icon-size-mobile;
            }
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            -ms-transform: translate(-50%, -50%);
            text-align: center;
            position: absolute;
          }
    }

    &.complete {
        .icon {
            color: desaturate(#3A8AAF, 15%);
        }
        .complete-overlay {
            opacity: 1;
            transition: all 250ms ease;
        }
    }

    &.incomplete {
        .icon {
            color: desaturate(#3A8AAF, 15%);
        }
        .incomplete-overlay {
            opacity: 1;
            transition: all 250ms ease;
        }
    }

    &.complete, &.incomplete {
        &:hover {
            .overlay {
                opacity: 0;
                transition: all 250ms ease;
            }
        }
    }

    &:hover {
        transform: translate(0px, -10px);

        -webkit-transition: all 250ms ease;
        -moz-transition: all 250ms ease;
        -o-transition: all 250ms ease;
        transition: all 250ms ease;

        .event-image {
            -webkit-filter: saturate(75%);
            filter: saturate(75%);
        }
    }
}

span {
    &.event-title {
        font-size: 16px;
        font-family: 'Roboto', sans-serif;
    }

    &.event-summary {
        font-size: 12px;
        opacity: 0.66;
        position: absolute;
        right: 5px;
        bottom: 5px;
    }
}

.event-cards {
    justify-content: center!important;
}

.bonus-event-indicator {
    position: absolute;
    left: 5px;
    bottom: 5px;
    color: #9bd0db;
    font-size: 14px;
}

